# AI-Model-Deployment

./: README.md  llm.py  pyproject.toml
app/: agent.py  main.py  schemas.py  tools.py
app/static/: index.html
tests/: test_agent.py
